Fix layout shift when rendering ASCII image

--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     src: url('fonts/GAU_cube_R.TTF') format('truetype');
 }
 
-/* O BODY age como o "palco" */
 body {
     background-color: #122222;
     /* Fundo da tela inteira */
@@ -119,14 +118,20 @@ body {
 
 #ascii-art {
     font-size: 10px;
-    /* position: absolute;
-    top: 10px;
-    left: 50%;
-    transform: translateX(-50%); */
+    line-height: 10px;
 
     position: relative; /* Mantém no fluxo */
     margin-bottom: 40px; /* Empurra o conteúdo de baixo */
     white-space: pre; /* Garante que a arte não quebre linhas indevidamente */
+    text-align: center;
+
+    min-height: 300px; /* A ASCII art 1 tem umas 22 linhas. 22*10px = 220px. Mas testando, só 300 funcionou bem */
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    white-space: pre; /* Mantém os espaços em branco */
     text-align: center;
 
     pointer-events: visiblePainted;
@@ -136,15 +141,18 @@ body {
 
 #ascii-art2 {
     font-size: 5px;
-    /* position: absolute;
-    top: 10px;
-    left: 50%;
-    transform: translateX(-50%); */
+    line-height: 5px;
 
-    position: relative; /* Mantém no fluxo */
-    margin-bottom: 40px; /* Empurra o conteúdo de baixo */
-    white-space: pre; /* Garante que a arte não quebre linhas indevidamente */
+    position: relative;
+    margin-bottom: 40px;
+    white-space: pre;
     text-align: center;
+
+    min-height: 400px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     pointer-events: visiblePainted;
     z-index: 1;
